Fix: vertical align of th and td to middle

--- a/style.css
+++ b/style.css
@@ -90,7 +90,7 @@
 .table th,
 .table td {
   padding: 0.75rem;
-  vertical-align: top;
+  vertical-align: middle;
   border-top: 1px solid #dee2e6;
 }
 
